# rocm-doctor

./: .gitignore  LICENSE  README.md  pyproject.toml
rocm_doctor/: __init__.py  __main__.py  cli.py  report.py
rocm_doctor/checks/: __init__.py  driver.py  hardware.py  rocm_runtime.py
rocm_doctor/core/: result.py  runner.py
rocm_doctor/data/: gfx_map.py
